# mar-did

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  main.py  media  pyproject.toml
.github/workflows/: clean-master.yml  deployment-clean.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
core/: admin.py  channels_consumer.py  channels_routing.py  components.py  consumer.py  models.py  signals.py  urls.py  utils.py  view_cruises.py  view_lookups.py
core/dir/: dir_scanner.py  scanner.py
core/fixtures/: README.txt  all_fixtures.json  countries.json  data_status_fixtures.json  data_type_fixtures.json  geographic_regions_fixtures.json  group_fixtures.json  groups_fixtures.json  init_dataset_status.json  init_datatypes.json  init_file_types.json  init_organizations.json  init_participants.json  init_platforms.json  init_positions.json  init_programs.json  initial_lookups.json  initial_lookups_fixtures.json  load_init_fixtures.py  platforms.json  program_fixtures.json  ship_fixtures.json  status_fixtures.json  test_contact_fixtures.json  test_countries.json  test_data.json  test_organizations.json  test_platforms.json  test_regions.json  (+1 more)
custom_widgets/: widgets.py
docs/: MARDID_DataModel.mwb  Requirements_CPDB.docx  WorkflowChiefScientists.mmd  django-db-model.mwb  django-db-model.mwb.bak  mardid-db-model.mwb
mardid/: apps.py  models.py  urls.py  views.py
scripts/: load_countries_from_csv.py  load_organizations_from_csv.py  load_regions_from_csv.py
templates/: base.html  login.html  navbar.html
(+324 files in other folders)
